--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "stream": "^0.0.2",
     "uuid": "^10.0.0",
     "ws": "^8.13.0"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "dev":"nodemon app.js"
   }
 }
