--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 PORT=5050
-DB_HOST=db-postgresql-nyc3-49604-do-user-18481608-0.d.db.ondigitalocean.com
-DB_PORT=25060
-DB_USER=doadmin
-DB_PASS=AVNS_I3IKWuyVALBzMD10MiU
-DB_NAME=defaultdb
-DB_SSL=true
-
-# DB_NAME=doadmin
-# DB_HOST=localhost
-# DB_USER=postgres
-# DB_PASS=postgres
-# DB_PORT=5432
+# DB_HOST=db-postgresql-nyc3-49604-do-user-18481608-0.d.db.ondigitalocean.com
+# DB_PORT=25060
+# DB_USER=doadmin
+# DB_PASS=AVNS_I3IKWuyVALBzMD10MiU
+# DB_NAME=defaultdb
 # DB_SSL=true
+
+DB_NAME=shardb
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=postgres
+DB_PORT=5430
+DB_SSL=false
