--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sqlite3": "^5.1.6",
     "stream": "^0.0.2",
     "uuid": "^10.0.0",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "node app.js",
