--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.20.2",
     "connect-pg-simple": "^9.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.1.4",
     "epress": "^0.0.1-security",
     "express": "^4.18.2",
