--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ PORT=5050
 # DB_NAME=defaultdb
 # DB_SSL=true
 
-DB_NAME=doadmin
+DB_NAME=shardb
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASS=postgres
-DB_PORT=5432
+DB_PORT=5430
 DB_SSL=false
